Tweak linker configuration

--- a/linker_config.cfg
+++ b/linker_config.cfg
@@ -1,8 +1,23 @@
+
+# This is the linker configuration file for this project
+# this file exists so we can define the address of
+# our memory pages, as ld65's default configuration is suitable
+# for C 6502 code, which is not the case.
+# so we have copied the original linker configuration, and tweaked it
+# to our needs.
+# changes:
+# ZEROPAGE memory now starts at zero, not two.
+# RAM memory now starts at $200, not $6000
+
+# documentation:  https://cc65.github.io/doc/ld65.html#toc5.2
+# source:         https://github.com/cc65/cc65/blob/master/cfg/nes.cfg
+# inspiration:    https://github.com/bbbradsmith/NES-ca65-example/blob/unix/example.cfg
+
 SYMBOLS {
     __STACKSIZE__: type = weak, value = $0300; # 3 pages stack
 }
 MEMORY {
-    ZP:     file = "", start = $0002, size = $001A, type = rw, define = yes;
+    ZP:     file = "", start = $0000, size = $0100, type = rw, define = yes;
 
     # INES Cartridge Header
     HEADER: file = %O, start = $0000, size = $0010, fill = yes;
@@ -20,17 +35,11 @@ MEMORY {
     # 1 8k CHR Bank
     ROM2:   file = %O, start = $0000, size = $2000, fill = yes;
 
-    # standard 2k SRAM (-zeropage)
+    # standard 2k SRAM
+    # $0000-$0100 zero page
     # $0100-$0200 cpu stack
-    # $0200-$0500 3 pages for ppu memory write buffer
-    # $0500-$0800 3 pages for cc65 parameter stack
-    SRAM:   file = "", start = $0500, size = __STACKSIZE__, define = yes;
-
-    # additional 8K SRAM Bank
-    # - data (run)
-    # - bss
-    # - heap
-    RAM:    file = "", start = $6000, size = $2000, define = yes;
+    # $0200-$0800 bss
+    RAM:   file = "", start = $0200, size = $0600, define = yes;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,              type = zp;
