Get rid of manually addressed variables

--- a/linker_config.cfg
+++ b/linker_config.cfg
@@ -52,7 +52,7 @@ SEGMENTS {
     DATA:     load = ROM0, run = RAM, type = rw,  define   = yes;
     VECTORS:  load = ROMV,            type = rw;
     CHARS:    load = ROM2,            type = rw;
-    BSS:      load = RAM,             type = bss, define   = yes;
+    BSS:      load = RAM,             type = bss, define   = yes, align = $0100;
 }
 FEATURES {
     CONDES: type    = constructor,
